web/libraries/fractal/components/tests/tag/fail/sandbox.twig
{% sandbox %}
  {% include '@fractal/tests/tags/pass/block.twig' %}
{% endsandbox %}
